--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         
         const tooltip = d3.select("#tooltip");
         
-        const API_KEY = "AIzaSyCTyBJ5dQZoWWgB14Wjd0l7heigxDRT-qs";
+        const API_KEY = "AIzaSyCTyBJ5dQZoWWgB14Wjd0l7heigxDRT-qs"; /* this is my test key and has been intetionally exposed by the time you are looking at this it has been deleted so dont worry */
         let simulation = null;
 
         generateBtn.addEventListener('click', handleGeneration);
